--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,8 @@ commands:
       - спвн
       - савн
       - павн
+  kill:
+    aliases:
+      - killplayer
+      - playerkill
+    permission: rspawn.command.kill
